--- a/HelloWorld/app/src/main/res/layout/activity_main.xml
+++ b/HelloWorld/app/src/main/res/layout/activity_main.xml
@@ -32,5 +32,13 @@
         android:layout_margin="5sp"
         android:text="@string/button_submit_text"
         />
+    <Button
+        android:id="@+id/button_launch_activity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:layout_margin="5sp"
+        android:text="@string/launch_activty_button"
+        />
 
 </LinearLayout>
