Added menu on the left
added list view for the messages
added the menu to all the views except the list view
menu conatains 3 options (list view, recieved view, add message)

--- a/Chatter/app/src/main/res/layout/activity_chatter_send.xml
+++ b/Chatter/app/src/main/res/layout/activity_chatter_send.xml
@@ -43,6 +43,6 @@
         android:layout_marginBottom="5sp"
         android:layout_marginLeft="5sp"
         android:layout_marginRight="5sp"
-        android:text="View Jitters"
+        android:text="@string/menu_item_view_jitter_title"
         android:textSize="15sp" />
 </LinearLayout>
