--- a/Chatter/app/src/main/res/menu/main_menu.xml
+++ b/Chatter/app/src/main/res/menu/main_menu.xml
@@ -9,4 +9,6 @@
     <item android:id="@+id/menu_item_view_jitters"
         android:title="@string/menu_item_view_jitter_title"
         android:titleCondensed="@string/menu_item_view_jitter_title_condensed"/>
+    <item android:id="@+id/menu_Item_view_custom_list"
+        android:title="View Custom List" />
 </menu>
