--- a/Chatter/app/src/main/res/menu/main_menu.xml
+++ b/Chatter/app/src/main/res/menu/main_menu.xml
@@ -11,4 +11,6 @@
         android:titleCondensed="@string/menu_item_view_jitter_title_condensed"/>
     <item android:id="@+id/menu_Item_view_custom_list"
         android:title="View Custom List" />
+    <item android:id="@+id/menu_item_preferences"
+        android:title="Preferences"/>
 </menu>
