--- a/Chatter/app/src/main/res/xml/prefs.xml
+++ b/Chatter/app/src/main/res/xml/prefs.xml
@@ -9,5 +9,18 @@
         android:title="Login Password"
         android:summary="Enter your password here"
         android:password="true"/>
+    <!--<EditTextPreference-->
+        <!--android:key="main_bg_color"-->
+        <!--android:title="Background Color"-->
+        <!--android:summary="Use this to change your background color (#RRGGBB)"/>-->
+    <ListPreference
+        android:key="main_bg_color"
+        android:title="Background Color"
+        android:summary="Choose your background color (#RRGGBB)"
+        android:defaultValue="#990000"
+        android:entries="@array/color_names"
+        android:entryValues="@array/color_values"/>
+
+
 
 </PreferenceScreen>
