--- a/Chatter/app/src/main/res/layout/activity_chatter_send.xml
+++ b/Chatter/app/src/main/res/layout/activity_chatter_send.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:orientation="vertical"
     android:background="@color/send_chatter_background_color"
-    android:orientation="vertical">
+    android:id="@+id/layout_send_activity">
 
     <TextView
         android:layout_width="wrap_content"
