--- a/Chatter/app/src/main/res/layout/activity_chatter_send.xml
+++ b/Chatter/app/src/main/res/layout/activity_chatter_send.xml
@@ -3,9 +3,13 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:background="@color/send_chatter_background_color"
+    android:background="@drawable/nait_logo_03"
     android:id="@+id/layout_send_activity">
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#55ddcc99">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -46,4 +50,6 @@
         android:layout_marginRight="5sp"
         android:text="@string/menu_item_view_jitter_title"
         android:textSize="15sp" />
+    </LinearLayout>
+
 </LinearLayout>
