--- a/Chatter/app/src/main/res/layout/activity_chat_spinner.xml
+++ b/Chatter/app/src/main/res/layout/activity_chat_spinner.xml
@@ -7,7 +7,7 @@
         android:id="@+id/spinner_chatter"
         android:layout_width="150dp"
         android:layout_height="40dp"
-        android:dropDownWidth="125dp"
+        android:dropDownWidth="wrap_content"
         android:prompt= "@string/spinner_prompt"
         />
     <EditText
