--- a/Lab_One_Oscar_Reviews/app/src/main/res/xml/prefs.xml
+++ b/Lab_One_Oscar_Reviews/app/src/main/res/xml/prefs.xml
@@ -17,9 +17,10 @@
         android:key="main_bg_color"
         android:title="Background Color"
         android:summary="Choose your background color (#RRGGBB)"
-        android:defaultValue="#990000"/>
-        <!--android:entries="@array/color_names"
-        android:entryValues="@array/color_values"-->
+        android:defaultValue="#990000"
+        android:entries="@array/color_names"
+        android:entryValues="@array/color_values"/>
+
 
 
 </PreferenceScreen>
