--- a/Lab_One_Oscar_Reviews/app/src/main/res/layout/activity_main.xml
+++ b/Lab_One_Oscar_Reviews/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,8 @@
 
     <RadioGroup
         android:layout_width="192dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/rg_category">
         <RadioButton
             android:id="@+id/radioBestPicture"
             android:layout_width="wrap_content"
