fixed post and created display reviews custum list

--- a/Lab_One_Oscar_Reviews/app/src/main/res/layout/activity_main.xml
+++ b/Lab_One_Oscar_Reviews/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/radio_best_actor"
-            android:checked="false"/>
+            android:checked="false"
+            />
         <RadioButton
             android:id="@+id/radioBestActress"
             android:layout_width="wrap_content"
