--- a/Lab_One_Oscar_Reviews/app/src/main/res/layout/activity_display_review.xml
+++ b/Lab_One_Oscar_Reviews/app/src/main/res/layout/activity_display_review.xml
@@ -2,15 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:orientation="vertical"
 
     >
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5sp"
-        android:layout_marginLeft="5sp"
-        android:layout_marginRight="5sp"
-        android:background="#FFFFFF"
-        android:id="@+id/textbox_receive_review"/>
+
+    <ListView
+        android:id="@+id/listview_receive_review"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#1c1c1c"
+        android:layout_weight="2"
+        android:drawSelectorOnTop="false"
+        android:divider="#ffff00"
+        android:dividerHeight="2sp"/>
+
 
 </LinearLayout>
