--- a/Lab_One_Oscar_Reviews/app/src/main/res/xml/prefs.xml
+++ b/Lab_One_Oscar_Reviews/app/src/main/res/xml/prefs.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <EditTextPreference
+        android:key="url"
+        android:title="URL"
+        android:summary="Enter your URL here" />
+    <EditTextPreference
         android:key="login_name"
         android:title="Login Name"
         android:summary="Enter your alias here" />
@@ -9,10 +13,7 @@
         android:title="Login Password"
         android:summary="Enter your password here"
         android:password="true"/>
-    <!--<EditTextPreference-->
-    <!--android:key="main_bg_color"-->
-    <!--android:title="Background Color"-->
-    <!--android:summary="Use this to change your background color (#RRGGBB)"/>-->
+
     <ListPreference
         android:key="main_bg_color"
         android:title="Background Color"
