--- a/Lab_One_Oscar_Reviews/app/src/main/res/layout/custom_row_layout.xml
+++ b/Lab_One_Oscar_Reviews/app/src/main/res/layout/custom_row_layout.xml
@@ -14,6 +14,7 @@
         android:textSize="12dp"
         android:textStyle="bold"
         android:textColor="#ef1affdd"
+        android:text="user"
         />
     <TextView
         android:id="@+id/custom_row_date"
@@ -25,6 +26,7 @@
         android:textStyle="italic"
         android:textColor="#ef1aaaff"
         android:typeface="sans"
+        android:text="date"
         />
 
     <TextView
@@ -35,6 +37,7 @@
         android:textSize="12dp"
         android:textStyle="bold"
         android:textColor="#ef1affdd"
+        android:text="category"
         />
     <TextView
         android:id="@+id/custom_row_nominee"
@@ -44,6 +47,7 @@
         android:textStyle="bold"
         android:layout_below="@id/custom_row_user"
         android:textColor="#ef1a6677"
+        android:text="nominee"
         />
     <TextView
         android:id="@+id/custom_row_review"
@@ -53,5 +57,7 @@
         android:textStyle="bold"
         android:layout_below="@id/custom_row_nominee"
         android:textColor="#ef1a6677"
+        android:text="review"
+
         />
 </RelativeLayout>
