--- a/Lab_One_Oscar_Reviews/app/src/main/res/layout/activity_display_review.xml
+++ b/Lab_One_Oscar_Reviews/app/src/main/res/layout/activity_display_review.xml
@@ -10,10 +10,10 @@
         android:id="@+id/listview_receive_review"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#1c1c1c"
+        android:background="#2ad"
         android:layout_weight="2"
         android:drawSelectorOnTop="false"
-        android:divider="#ffff00"
+        android:divider="#ff33"
         android:dividerHeight="2sp"/>
 
 
