--- a/Lab_One_Oscar_Reviews/app/src/main/res/layout/activity_display_review.xml
+++ b/Lab_One_Oscar_Reviews/app/src/main/res/layout/activity_display_review.xml
@@ -13,7 +13,7 @@
         android:background="#2ad"
         android:layout_weight="2"
         android:drawSelectorOnTop="false"
-        android:divider="#ff33"
+        android:divider="#4733ff"
         android:dividerHeight="2sp"/>
 
 
