--- a/Week05/app/src/main/res/menu/main_menu.xml
+++ b/Week05/app/src/main/res/menu/main_menu.xml
@@ -4,4 +4,6 @@
         android:title="Start Service"/>
     <item android:id="@+id/menu_item_stop_service"
         android:title="Stop Service"/>
+    <item android:id="@+id/menu_item_view_chatter"
+        android:title="View Chatter"/>
 </menu>
