added icon to oscar app & in class app
In class app: created custom list that takes data from db and displays it

--- a/Week05/app/src/main/res/menu/main_menu.xml
+++ b/Week05/app/src/main/res/menu/main_menu.xml
@@ -6,4 +6,6 @@
         android:title="Stop Service"/>
     <item android:id="@+id/menu_item_view_chatter"
         android:title="View Chatter"/>
+    <item android:id="@+id/menu_item_list_chatter"
+        android:title="Chatter Listview"/>
 </menu>
