--- a/Week05/app/src/main/res/menu/main_menu.xml
+++ b/Week05/app/src/main/res/menu/main_menu.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_item_start_service"
-        android:title="Start Service"/>
-    <item android:id="@+id/menu_item_stop_service"
-        android:title="Stop Service"/>
-    <item android:id="@+id/menu_item_view_chatter"
-        android:title="View Chatter"/>
+    <item android:id="@+id/menu_item_home"
+        android:title="Home"/>
+    <item android:id="@+id/menu_item_toggle_service"
+        android:title="Go online"/>
     <item android:id="@+id/menu_item_list_chatter"
         android:title="Chatter Listview"/>
 </menu>
