--- a/TodoOrNot/app/src/main/res/layout/activity_main.xml
+++ b/TodoOrNot/app/src/main/res/layout/activity_main.xml
@@ -6,32 +6,41 @@
 
     <TextView
         android:layout_height="wrap_content"
-        android:text="Send Data"
+        android:text="Todo List App"
         android:textSize="25sp"
         android:textColor="#000"
         android:layout_width="wrap_content"
         android:layout_gravity="center_horizontal"
         />
+
     <EditText
+        android:id="@+id/textbox_list_name"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1"
-        android:layout_marginTop="5sp"
+        android:layout_height="78dp"
         android:layout_marginLeft="5sp"
         android:layout_marginRight="5sp"
-        android:hint="Enter your data"
+        android:layout_marginTop="5sp"
         android:background="#CCFFFFFF"
-        android:id="@+id/textbox_data"
-        />
-    <Button
-        android:layout_height="wrap_content"
+        android:hint="Enter List Name" />
+    <EditText
+        android:id="@+id/textbox_content"
         android:layout_width="fill_parent"
-        android:text="Send Data"
-        android:textSize="15sp"
+        android:layout_height="78dp"
         android:layout_marginLeft="5sp"
-        android:layout_marginTop="5sp"
         android:layout_marginRight="5sp"
+        android:layout_marginTop="5sp"
+        android:background="#CCFFFFFF"
+        android:hint="Enter your content" />
+
+    <Button
+        android:id="@+id/button_send_to_list"
+        android:layout_width="195dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="5sp"
-        android:id="@+id/button_send_data"
-        />
+        android:layout_marginLeft="5sp"
+        android:layout_marginRight="5sp"
+        android:layout_marginTop="5sp"
+        android:elevation="0dp"
+        android:text="Send Data"
+        android:textSize="15sp" />
 </LinearLayout>
