--- a/TodoOrNot/app/src/main/res/layout/listview_row.xml
+++ b/TodoOrNot/app/src/main/res/layout/listview_row.xml
@@ -5,12 +5,12 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/sender"
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:textColor="#CCF"
+        android:textColor="#000"
         android:textSize="12sp"
         android:textStyle="bold" />
 
@@ -31,7 +31,7 @@
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:layout_below="@id/sender"
+        android:layout_below="@id/tv_title"
         android:textSize="14sp"
         android:textStyle="bold"
         android:textColor="#ee55dd"/>
