--- a/TodoOrNot/app/src/main/res/layout/activity_main.xml
+++ b/TodoOrNot/app/src/main/res/layout/activity_main.xml
@@ -54,10 +54,20 @@
         android:elevation="0dp"
         android:text="View Data"
         android:textSize="15sp" />
+
     <Spinner
-        android:id="@+id/title_spinner"
-        android:layout_width="125dp"
-        android:layout_height="50dp"
-        android:textSize="8sp"
-        android:background="#33aa11"></Spinner>
+        android:id="@+id/todo_title_spinner"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:dropDownWidth="125dp"
+        android:prompt="@string/select_message" />
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#CCFFFF00"
+        android:textSize="12sp"
+        android:textStyle="bold" />
+
 </LinearLayout>
