--- a/CashRegister/app/src/main/res/layout/spinner_receipt_row.xml
+++ b/CashRegister/app/src/main/res/layout/spinner_receipt_row.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
+
+
 
     <TextView
-        android:id="@+id/textview_todo_title"
+        android:id="@+id/textview_receipt_customer_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
@@ -13,8 +15,5 @@
         android:paddingTop="3dp"
         android:textColor="#127855"
         android:textSize="20sp"
-    />
-
-
-
-</RelativeLayout>
+        />
+</LinearLayout>
