--- a/TodoOrNot/app/src/main/res/layout/activity_main.xml
+++ b/TodoOrNot/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
 
     <Spinner
         android:id="@+id/todo_title_spinner"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:dropDownWidth="125dp"
         android:prompt="@string/select_message" />
