--- a/TodoOrNot/app/src/main/res/layout/listview_row.xml
+++ b/TodoOrNot/app/src/main/res/layout/listview_row.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/tv_title"
+        android:id="@+id/tv_title_id"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
@@ -13,14 +13,34 @@
         android:textColor="#000"
         android:textSize="12sp"
         android:textStyle="bold" />
+    <TextView
+        android:id="@+id/tv_content_id"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:textColor="#000"
+        android:textSize="12sp"
+        android:textStyle="bold" />
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/tv_title_id"
+        android:textColor="#000"
+        android:textSize="12sp"
+        android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/date"
+        android:id="@+id/tv_date"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="10sp"
+        android:layout_toRightOf="@id/tv_title"
         android:textSize="12sp"
         android:textStyle="italic"
         android:typeface="sans"
@@ -28,10 +48,10 @@
         />
 
     <TextView
-        android:id="@+id/message"
+        android:id="@+id/tv_content"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:layout_below="@id/tv_title"
+        android:layout_toRightOf="@id/tv_date"
         android:textSize="14sp"
         android:textStyle="bold"
         android:textColor="#ee55dd"/>
