--- a/TodoOrNot/app/src/main/res/layout/activity_main.xml
+++ b/TodoOrNot/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    tools:context="com.example.anton.todoornot.MainActivity">
+    tools:context="com.example.anton.todoornot.MainActivity"
+    android:id="@+id/layout_main_activity">
 
     <TextView
         android:layout_height="wrap_content"
