--- a/TodoOrNot/app/src/main/res/layout/activity_edit_content.xml
+++ b/TodoOrNot/app/src/main/res/layout/activity_edit_content.xml
@@ -27,18 +27,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="delete"
+            android:text="@string/btn_delete"
             />
         <Button
             android:id="@+id/button_save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="save"
+            android:text="@string/btn_save"
             android:layout_toRightOf="@id/button_delete"
             />
-
-
+        <CheckBox
+            android:id="@+id/checkbox_completed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/check_completed"
+            android:layout_marginLeft="10sp"
+            android:layout_marginTop="8sp"/>
     </LinearLayout>
 
 
