--- a/TodoOrNot/app/src/main/res/layout/listview_row.xml
+++ b/TodoOrNot/app/src/main/res/layout/listview_row.xml
@@ -2,141 +2,43 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
-    <!--<RelativeLayout-->
-        <!--android:id="@+id/REFReLayTellFriend"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="10dp"-->
-        <!--android:orientation="horizontal"-->
-        <!--android:paddingBottom="5dp"-->
-        <!--android:paddingTop="5dp"-->
-        <!--android:background="@drawable/rounded_corners"-->
-        <!--&gt;-->
+    android:orientation="vertical">
 
 
-
-        <!--<TextView-->
-            <!--android:id="@+id/tv_title_id"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="fill_parent"-->
-            <!--android:layout_alignParentLeft="true"-->
-            <!--android:layout_alignParentTop="true"-->
-            <!--android:textColor="#000"-->
-            <!--android:textSize="20sp"-->
-            <!--android:textStyle="bold"-->
-
-            <!--android:singleLine="true"-->
-            <!--/>-->
-        <!--<TextView-->
-            <!--android:id="@+id/tv_detail_id"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="fill_parent"-->
-            <!--android:layout_alignParentLeft="true"-->
-            <!--android:layout_alignParentTop="true"-->
-            <!--android:layout_below="@id/tv_title_id"-->
-            <!--android:textColor="#000"-->
-            <!--android:textSize="20sp"-->
-            <!--android:textStyle="bold"-->
-            <!--android:singleLine="true"-->
-            <!--/>-->
-        <!--<TextView-->
-            <!--android:id="@+id/tv_content"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="fill_parent"-->
-            <!--android:layout_alignParentLeft="true"-->
-            <!--android:layout_alignParentTop="true"-->
-            <!--android:layout_toRightOf="@id/tv_detail_id"-->
-            <!--android:textColor="#000"-->
-            <!--android:textSize="20sp"-->
-            <!--android:textStyle="bold"-->
-            <!--android:singleLine="true"-->
-            <!--/>-->
-        <!--<ImageButton-->
-            <!--android:id="@+id/button_archive"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentRight="true"-->
-            <!--android:background="@android:drawable/ic_menu_save"/>-->
-        <!--<ImageButton-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_toLeftOf="@+id/button_archive"-->
-            <!--android:background="@android:drawable/ic_delete"/>-->
-
-
-
-    <!--</RelativeLayout>-->
-
-
-    <TextView
-        android:id="@+id/tv_title_id"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:textColor="#000"
-        android:textSize="20sp"
-        android:textStyle="bold"
-
-        android:singleLine="true"
-        />
-    <TextView
-        android:id="@+id/tv_detail_id"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_below="@id/tv_title_id"
-        android:textColor="#000"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:singleLine="true"
-        />
     <TextView
         android:id="@+id/tv_content"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/tv_detail_id"
+
+        android:singleLine="true"
         android:textColor="#000"
         android:textSize="20sp"
-        android:textStyle="bold"
-        android:singleLine="true"
-        />
-    <!--<ImageButton-->
-        <!--android:id="@+id/button_archive"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:background="@android:drawable/ic_menu_save"/>-->
-    <!--<ImageButton-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_toLeftOf="@+id/button_archive"-->
-        <!--android:background="@android:drawable/ic_delete"/>-->
-    <!--<TextView-->
-        <!--android:id="@+id/tv_date"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="fill_parent"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_marginRight="10sp"-->
-        <!--android:layout_toRightOf="@id/tv_title"-->
-        <!--android:textSize="12sp"-->
-        <!--android:textStyle="italic"-->
-        <!--android:typeface="sans"-->
-        <!--android:textColor="#CC5500"-->
-        <!--/>-->
+        android:textStyle="bold" />
 
-    <!--<TextView-->
-        <!--android:id="@+id/tv_content"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="fill_parent"-->
-        <!--android:layout_toRightOf="@id/tv_date"-->
-        <!--android:textSize="14sp"-->
-        <!--android:textStyle="bold"-->
-        <!--android:textColor="#ee55dd"/>-->
+    <TextView
+        android:id="@+id/tv_date_created"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/tv_content"
+
+        android:singleLine="true"
+        android:textColor="#000"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tv_completed_flag"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+
+        android:singleLine="true"
+        android:textColor="#000"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
