--- a/TodoOrNot/app/src/main/res/layout/activity_edit_content.xml
+++ b/TodoOrNot/app/src/main/res/layout/activity_edit_content.xml
@@ -30,6 +30,13 @@
             android:text="@string/btn_delete"
             />
         <Button
+            android:id="@+id/button_archive"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/btn_archive"
+            />
+        <Button
             android:id="@+id/button_save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
