--- a/TodoOrNot/app/src/main/res/menu/main_menu.xml
+++ b/TodoOrNot/app/src/main/res/menu/main_menu.xml
@@ -6,4 +6,7 @@
     <item android:id="@+id/menu_item_todo_main"
         android:title= "@string/menu_main_screen"
         />
+    <item android:id="@+id/menu_item_view_archived"
+        android:title= "@string/menu_view_archived"
+        />
 </menu>
