--- a/TodoOrNot/app/src/main/res/layout/activity_view_archived.xml
+++ b/TodoOrNot/app/src/main/res/layout/activity_view_archived.xml
@@ -1,12 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-
+    android:orientation="vertical"
+    tools:context="com.example.anton.todoornot.ViewArchivedActivity">
     <ListView
-        android:id="@+id/list"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-    </ListView>
+        android:id="@+id/listview_custom"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#1c1c1c"
+        android:layout_weight="2"
+        android:drawSelectorOnTop="false"
+        android:divider="#ffff00"
+        android:dividerHeight="2sp"/>
+
 
 </LinearLayout>
