--- a/TodoOrNot/app/src/main/res/values/arrays.xml
+++ b/TodoOrNot/app/src/main/res/values/arrays.xml
@@ -16,4 +16,15 @@
         <item  name ="white">#ffffff</item>
         <item  name ="black">#000000</item>
     </string-array>
+
+    <string-array name="text_sizes">
+        <item  name ="size_small">Small</item>
+        <item  name ="size_medium">Medium</item>
+        <item  name ="size_large">Large</item>
+    </string-array>
+    <string-array name="size_values">
+        <item  name ="size_small">12</item>
+        <item  name ="size_medium">18</item>
+        <item  name ="size_large">25</item>
+    </string-array>
 </resources>
