--- a/CanadianTest/app/src/main/res/layout/activity_main.xml
+++ b/CanadianTest/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.drantiev.anton.canadiantest.MainActivity">
+    tools:context="com.drantiev.anton.canadiantest.MainActivity"
+    android:id="@+id/main_view">
 
     <TextView
         android:layout_width="match_parent"
@@ -28,6 +28,7 @@
             android:layout_marginTop="40sp"/>
 
         <RadioGroup
+            android:id="@+id/rb_group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="50sp"
@@ -63,7 +64,7 @@
                 android:text="radio button" />
         </RadioGroup>
         <Button
-            android:id="@+id/ntb_next"
+            android:id="@+id/btn_next"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Next"/>
