--- a/CanadianTest/app/src/main/res/layout/activity_main.xml
+++ b/CanadianTest/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true">
+        android:gravity="center"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="90sp"
+        android:layout_marginTop="40sp"
+        android:id="@+id/transitions_container">
+
         <TextView
             android:id="@+id/tv_question"
             android:layout_width="match_parent"
@@ -68,6 +72,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Next"/>
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Transitions are awesome!"
+            android:visibility="gone"/>
     </LinearLayout>
 
 
