--- a/CanadianTest/app/src/main/res/layout/activity_main.xml
+++ b/CanadianTest/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="How Canadian you R?"
+        android:text="How Canadian R you?"
         android:textAlignment="center"
         android:textSize="20sp" />
 
